--- a/renderer/styles/global.css
+++ b/renderer/styles/global.css
@@ -1,1 +1,24 @@
 @import url("https://fonts.googleapis.com/css2?family=Varela+Round&display=swap");
+
+/* ===== Scrollbar CSS ===== */
+/* Firefox */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: #14b8a6 #ffffff;
+}
+
+/* Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+
+*::-webkit-scrollbar-track {
+  background: rgba(0, 0, 0, 0);
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #14b8a6;
+  border-radius: 10px;
+  border: 3px solid rgba(0, 0, 0, 0);
+}
